[package]
name = "lkxvbot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { default-features = false, features = ["macros", "rt", "time"], version = "1" }
twilight-gateway = "0"
twilight-http = "0"
twilight-model = "0"
twilight-standby = "0"
anyhow = "1"
futures-util = "0"
lazy_static = "1"
tracing = { version = "0", features = ["log", "log-always"] }
log = "0"
pretty_env_logger = "0"